--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 project(project_name)
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/WebServer)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/WebServer_sylar)
 
-include (WebServer/cmake/utils.cmake)
+include (WebServer_sylar/cmake/utils.cmake)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O3 -g -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function -Wno-builtin-macro-redefined")
@@ -11,12 +11,12 @@ set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O3 -g -std=c++11 -Wall -Wno-depre
 # 向工程添加多个特定的头文件搜索路径
 include_directories(.)
 include_directories(template)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/WebServer)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/WebServer/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/WebServer/include/http)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/WebServer/include/stream)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/WebServer_sylar)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/WebServer_sylar/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/WebServer_sylar/include/http)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/WebServer_sylar/include/stream)
 # 向工程添加多个特定的库文件搜索路径(静态库.a和动态库.so)
-link_directories(/home/wwt/project_name/WebServer/lib)  #用绝对路径
+link_directories(/home/wwt/project_name/WebServer_sylar/lib)  #用绝对路径
 
 # 查找并引入Boost库
 find_package(Boost REQUIRED)
